fix spacing on logo on mobile

--- a/style.scss
+++ b/style.scss
@@ -3947,6 +3947,9 @@ body {
 	#infinity-base .icext-feature a, div#item-header div#item-header-content, #item-buttons, .dir-form, .activity h3 { 
 		text-align: center; 
 	} 
+	h1.icext-header-logo img { 
+		margin-left: 8px; 
+	} 
 	.activity h3 { 
 		display: block; /* needed to get above centering to work */ 
 	} 
